--- a/Data Preprocessing/IoT23 - Data Preprocessing.ipynb
+++ b/Data Preprocessing/IoT23 - Data Preprocessing.ipynb
@@ -17,26 +17,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "capture_34 = \"D:/5800 Datasets/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-34-1/bro/conn.log.labeled\"\n",
-    "capture_43 = \"D:/5800 Datasets/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-43-1/bro/conn.log.labeled\"\n",
-    "capture_44 = \"D:/5800 Datasets/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-44-1/bro/conn.log.labeled\"\n",
-    "capture_49 = \"D:/5800 Datasets/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-49-1/bro/conn.log.labeled\"\n",
-    "capture_52 = \"D:/5800 Datasets/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-52-1/bro/conn.log.labeled\"\n",
-    "capture_20 = \"D:/5800 Datasets/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-20-1/bro/conn.log.labeled\"\n",
-    "capture_21 = \"D:/5800 Datasets/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-21-1/bro/conn.log.labeled\"\n",
-    "capture_42 = \"D:/5800 Datasets/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-42-1/bro/conn.log.labeled\"\n",
-    "capture_60 = \"D:/5800 Datasets/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-60-1/bro/conn.log.labeled\"\n",
-    "capture_17 = \"D:/5800 Datasets/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-17-1/bro/conn.log.labeled\"\n",
-    "capture_36 = \"D:/5800 Datasets/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-36-1/bro/conn.log.labeled\"\n",
-    "capture_33 = \"D:/5800 Datasets/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-33-1/bro/conn.log.labeled\"\n",
-    "capture_8 = \"D:/5800 Datasets/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-8-1/bro/conn.log.labeled\"\n",
-    "capture_35 = \"D:/5800 Datasets/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-35-1/bro/conn.log.labeled\"\n",
-    "capture_48 = \"D:/5800 Datasets/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-48-1/bro/conn.log.labeled\"\n",
-    "capture_39 = \"D:/5800 Datasets/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-39-1/bro/conn.log.labeled\"\n",
-    "capture_7 = \"D:/5800 Datasets/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-7-1/bro/conn.log.labeled\"\n",
-    "capture_9 = \"D:/5800 Datasets/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-9-1/bro/conn.log.labeled\"\n",
-    "capture_3 = \"D:/5800 Datasets/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-3-1/bro/conn.log.labeled\"\n",
-    "capture_1 = \"D:/5800 Datasets/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-1-1/bro/conn.log.labeled\""
+    "capture_34 = \"/media/wuguo-buaa/LENOVO_USB_HDD/iot-data/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-34-1/bro/conn.log.labeled\"\n",
+    "capture_43 = \"/media/wuguo-buaa/LENOVO_USB_HDD/iot-data/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-43-1/bro/conn.log.labeled\"\n",
+    "capture_44 = \"/media/wuguo-buaa/LENOVO_USB_HDD/iot-data/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-44-1/bro/conn.log.labeled\"\n",
+    "capture_49 = \"/media/wuguo-buaa/LENOVO_USB_HDD/iot-data/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-49-1/bro/conn.log.labeled\"\n",
+    "capture_52 = \"/media/wuguo-buaa/LENOVO_USB_HDD/iot-data/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-52-1/bro/conn.log.labeled\"\n",
+    "capture_20 = \"/media/wuguo-buaa/LENOVO_USB_HDD/iot-data/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-20-1/bro/conn.log.labeled\"\n",
+    "capture_21 = \"/media/wuguo-buaa/LENOVO_USB_HDD/iot-data/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-21-1/bro/conn.log.labeled\"\n",
+    "capture_42 = \"/media/wuguo-buaa/LENOVO_USB_HDD/iot-data/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-42-1/bro/conn.log.labeled\"\n",
+    "capture_60 = \"/media/wuguo-buaa/LENOVO_USB_HDD/iot-data/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-60-1/bro/conn.log.labeled\"\n",
+    "capture_17 = \"/media/wuguo-buaa/LENOVO_USB_HDD/iot-data/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-17-1/bro/conn.log.labeled\"\n",
+    "capture_36 = \"/media/wuguo-buaa/LENOVO_USB_HDD/iot-data/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-36-1/bro/conn.log.labeled\"\n",
+    "capture_33 = \"/media/wuguo-buaa/LENOVO_USB_HDD/iot-data/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-33-1/bro/conn.log.labeled\"\n",
+    "capture_8 = \"/media/wuguo-buaa/LENOVO_USB_HDD/iot-data/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-8-1/bro/conn.log.labeled\"\n",
+    "capture_35 = \"/media/wuguo-buaa/LENOVO_USB_HDD/iot-data/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-35-1/bro/conn.log.labeled\"\n",
+    "capture_48 = \"/media/wuguo-buaa/LENOVO_USB_HDD/iot-data/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-48-1/bro/conn.log.labeled\"\n",
+    "capture_39 = \"/media/wuguo-buaa/LENOVO_USB_HDD/iot-data/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-39-1/bro/conn.log.labeled\"\n",
+    "capture_7 = \"/media/wuguo-buaa/LENOVO_USB_HDD/iot-data/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-7-1/bro/conn.log.labeled\"\n",
+    "capture_9 = \"/media/wuguo-buaa/LENOVO_USB_HDD/iot-data/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-9-1/bro/conn.log.labeled\"\n",
+    "capture_3 = \"/media/wuguo-buaa/LENOVO_USB_HDD/iot-data/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-3-1/bro/conn.log.labeled\"\n",
+    "capture_1 = \"/media/wuguo-buaa/LENOVO_USB_HDD/iot-data/iot_23_datasets_small/opt/Malware-Project/BigDataset/IoTScenarios/CTU-IoT-Malware-Capture-1-1/bro/conn.log.labeled\""
    ]
   },
   {
@@ -70,6 +70,30 @@
     "              'label']\n",
     "df34.drop(df34.tail(1).index,inplace=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                  ts                 uid      id.orig_h  id.orig_p  \\\n0  1545403848.981338   CDrkrSobGYxHhYfth  192.168.1.195    41040.0   \n1  1545403850.554283  CTWZQf2oJSvq6zmPAc  192.168.1.195    41042.0   \n2  1545403857.781320  CvyynC4Sabj9BNXFRi  192.168.1.195    41042.0   \n3  1545403859.183341  CWYyiA2sgRijwk2jEd  192.168.1.195    41044.0   \n4  1545403860.282392  CYttPy2pqOIcen7UDh  192.168.1.195    41046.0   \n\n        id.resp_h  id.resp_p proto service  duration orig_bytes  ...  \\\n0  185.244.25.235       80.0   tcp    http  1.477656        149  ...   \n1  185.244.25.235       80.0   tcp       -  3.147116          0  ...   \n2  185.244.25.235       80.0   tcp    http  1.305004        151  ...   \n3  185.244.25.235       80.0   tcp    http  1.004605        148  ...   \n4  185.244.25.235       80.0   tcp    http  4.129647        148  ...   \n\n  conn_state local_orig local_resp missed_bytes      history orig_pkts  \\\n0         SF          -          -       2896.0  ShADadttcfF      94.0   \n1         S0          -          -          0.0            S       3.0   \n2         SF          -          -       5792.0  ShADadttcfF      96.0   \n3         SF          -          -       2896.0   ShADadtcfF      67.0   \n4         SF          -          -       5792.0   ShADadtcfF      75.0   \n\n   orig_ip_bytes  resp_pkts  resp_ip_bytes           label  \n0         5525.0       96.0       139044.0  -   Benign   -  \n1          180.0        0.0            0.0  -   Benign   -  \n2         5699.0       92.0       133140.0  -   Benign   -  \n3         4148.0       65.0        92453.0  -   Benign   -  \n4         4412.0       69.0        97107.0  -   Benign   -  \n\n[5 rows x 21 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ts</th>\n      <th>uid</th>\n      <th>id.orig_h</th>\n      <th>id.orig_p</th>\n      <th>id.resp_h</th>\n      <th>id.resp_p</th>\n      <th>proto</th>\n      <th>service</th>\n      <th>duration</th>\n      <th>orig_bytes</th>\n      <th>...</th>\n      <th>conn_state</th>\n      <th>local_orig</th>\n      <th>local_resp</th>\n      <th>missed_bytes</th>\n      <th>history</th>\n      <th>orig_pkts</th>\n      <th>orig_ip_bytes</th>\n      <th>resp_pkts</th>\n      <th>resp_ip_bytes</th>\n      <th>label</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1545403848.981338</td>\n      <td>CDrkrSobGYxHhYfth</td>\n      <td>192.168.1.195</td>\n      <td>41040.0</td>\n      <td>185.244.25.235</td>\n      <td>80.0</td>\n      <td>tcp</td>\n      <td>http</td>\n      <td>1.477656</td>\n      <td>149</td>\n      <td>...</td>\n      <td>SF</td>\n      <td>-</td>\n      <td>-</td>\n      <td>2896.0</td>\n      <td>ShADadttcfF</td>\n      <td>94.0</td>\n      <td>5525.0</td>\n      <td>96.0</td>\n      <td>139044.0</td>\n      <td>-   Benign   -</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1545403850.554283</td>\n      <td>CTWZQf2oJSvq6zmPAc</td>\n      <td>192.168.1.195</td>\n      <td>41042.0</td>\n      <td>185.244.25.235</td>\n      <td>80.0</td>\n      <td>tcp</td>\n      <td>-</td>\n      <td>3.147116</td>\n      <td>0</td>\n      <td>...</td>\n      <td>S0</td>\n      <td>-</td>\n      <td>-</td>\n      <td>0.0</td>\n      <td>S</td>\n      <td>3.0</td>\n      <td>180.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>-   Benign   -</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1545403857.781320</td>\n      <td>CvyynC4Sabj9BNXFRi</td>\n      <td>192.168.1.195</td>\n      <td>41042.0</td>\n      <td>185.244.25.235</td>\n      <td>80.0</td>\n      <td>tcp</td>\n      <td>http</td>\n      <td>1.305004</td>\n      <td>151</td>\n      <td>...</td>\n      <td>SF</td>\n      <td>-</td>\n      <td>-</td>\n      <td>5792.0</td>\n      <td>ShADadttcfF</td>\n      <td>96.0</td>\n      <td>5699.0</td>\n      <td>92.0</td>\n      <td>133140.0</td>\n      <td>-   Benign   -</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1545403859.183341</td>\n      <td>CWYyiA2sgRijwk2jEd</td>\n      <td>192.168.1.195</td>\n      <td>41044.0</td>\n      <td>185.244.25.235</td>\n      <td>80.0</td>\n      <td>tcp</td>\n      <td>http</td>\n      <td>1.004605</td>\n      <td>148</td>\n      <td>...</td>\n      <td>SF</td>\n      <td>-</td>\n      <td>-</td>\n      <td>2896.0</td>\n      <td>ShADadtcfF</td>\n      <td>67.0</td>\n      <td>4148.0</td>\n      <td>65.0</td>\n      <td>92453.0</td>\n      <td>-   Benign   -</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1545403860.282392</td>\n      <td>CYttPy2pqOIcen7UDh</td>\n      <td>192.168.1.195</td>\n      <td>41046.0</td>\n      <td>185.244.25.235</td>\n      <td>80.0</td>\n      <td>tcp</td>\n      <td>http</td>\n      <td>4.129647</td>\n      <td>148</td>\n      <td>...</td>\n      <td>SF</td>\n      <td>-</td>\n      <td>-</td>\n      <td>5792.0</td>\n      <td>ShADadtcfF</td>\n      <td>75.0</td>\n      <td>4412.0</td>\n      <td>69.0</td>\n      <td>97107.0</td>\n      <td>-   Benign   -</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 21 columns</p>\n</div>"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df34.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
