sef_define_data_preprocess

--- a/Models/sampling.ipynb
+++ b/Models/sampling.ipynb
@@ -4314,11 +4314,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['dur', 'pkts', 'allbytes', 'spkts', 'sbytes', 'label', 'proto_icmp', 'proto_tcp', 'proto_udp', 'origstate_OTH', 'origstate_RSTR', 'origstate_S0', 'origstate_SF', 'state_Established', 'state_NotEstablished', 'appproto_-', 'appproto_dns', 'appproto_http', 'appproto_modbus', 'appproto_ssl', 'proto_unknown', 'origstate_unknown', 'appproto_unknown']\n"
+     ]
+    }
+   ],
+   "source": [
+    "columns = df_c.columns.tolist()\n",
+    "print(columns)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "outputs": [],
    "source": [
-    "columns = df_c.columns.tolist()"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "filepath = \"/media/wuguo-buaa/LENOVO_USB_HDD/Exp_data/data.csv\"\n",
+    "df = pd.read_csv(filepath)\n",
+    "del df['Unnamed: 0']\n",
+    "df = df.drop(columns=['ts', 'saddr', 'sport', 'daddr', 'dport', 'flow_type',\n",
+    "                        'module_labels'])\n",
+    "df[['proto_icmp', 'proto_tcp', 'proto_udp', 'origstate_OTH', 'origstate_RSTR', 'origstate_S0', 'origstate_SF', 'state_Established', 'state_NotEstablished', 'appproto_-', 'appproto_dns', 'appproto_http', 'appproto_modbus', 'appproto_ssl', 'proto_unknown', 'origstate_unknown', 'appproto_unknown']] = float(0)\n",
+    "df.loc[(df.proto == 'icmp'), 'proto_icmp'] = float(1)\n",
+    "df.loc[(df.proto == 'tcp'), 'proto_tcp'] = float(1)\n",
+    "df.loc[(df.proto == 'udp'), 'proto_udp'] = float(1)\n",
+    "df.loc[(df.origstate == 'OTH'), 'origstate_OTH'] = float(1)\n",
+    "df.loc[(df.origstate == 'RSTR'), 'origstate_RSTR'] = float(1)\n",
+    "df.loc[(df.origstate == 'S0'), 'origstate_S0'] = float(1)\n",
+    "df.loc[(df.origstate == 'SF'), 'origstate_SF'] = float(1)\n",
+    "df.loc[(df.state == 'Established'), 'state_Established'] = float(1)\n",
+    "df.loc[(df.state == 'NotEstablished'), 'state_NotEstablished'] = float(1)\n",
+    "df.loc[(df.appproto == '-'), 'appproto_-'] = float(1)\n",
+    "df.loc[(df.appproto == 'dns'), 'appproto_dns'] = float(1)\n",
+    "df.loc[(df.appproto == 'http'), 'appproto_http'] = float(1)\n",
+    "df.loc[(df.appproto == 'modbus'), 'appproto_modbus'] = float(1)\n",
+    "df.loc[(df.appproto == 'ssl'), 'appproto_ssl'] = float(1)"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "           dur  pkts  allbytes  spkts  sbytes   label  proto_icmp  proto_tcp  \\\n0     0.000396   3.0     516.0    3.0   516.0  normal         0.0        0.0   \n1     0.006307  63.0    7308.0   63.0  7308.0  normal         0.0        0.0   \n2     0.000396   3.0     516.0    3.0   516.0  normal         0.0        0.0   \n3     0.006307  63.0    7308.0   63.0  7308.0  normal         0.0        0.0   \n4     4.524552  12.0    5460.0   12.0  5460.0  normal         0.0        0.0   \n...        ...   ...       ...    ...     ...     ...         ...        ...   \n1499  0.000000   1.0       0.0    1.0     0.0  normal         0.0        0.0   \n1500  1.001310   2.0      74.0    2.0    74.0  normal         0.0        0.0   \n1501  0.000000   1.0       0.0    1.0     0.0  normal         0.0        0.0   \n1502  1.001310   2.0      74.0    2.0    74.0  normal         0.0        0.0   \n1503  1.000463   2.0      74.0    2.0    74.0  normal         0.0        0.0   \n\n      proto_udp  origstate_OTH  ...  state_Established  state_NotEstablished  \\\n0           1.0            0.0  ...                0.0                   1.0   \n1           1.0            0.0  ...                0.0                   1.0   \n2           1.0            0.0  ...                0.0                   1.0   \n3           1.0            0.0  ...                0.0                   1.0   \n4           1.0            0.0  ...                0.0                   1.0   \n...         ...            ...  ...                ...                   ...   \n1499        1.0            0.0  ...                0.0                   1.0   \n1500        1.0            0.0  ...                0.0                   1.0   \n1501        1.0            0.0  ...                0.0                   1.0   \n1502        1.0            0.0  ...                0.0                   1.0   \n1503        1.0            0.0  ...                0.0                   1.0   \n\n      appproto_-  appproto_dns  appproto_http  appproto_modbus  appproto_ssl  \\\n0            1.0           0.0            0.0              0.0           0.0   \n1            1.0           0.0            0.0              0.0           0.0   \n2            1.0           0.0            0.0              0.0           0.0   \n3            1.0           0.0            0.0              0.0           0.0   \n4            1.0           0.0            0.0              0.0           0.0   \n...          ...           ...            ...              ...           ...   \n1499         1.0           0.0            0.0              0.0           0.0   \n1500         0.0           1.0            0.0              0.0           0.0   \n1501         1.0           0.0            0.0              0.0           0.0   \n1502         0.0           1.0            0.0              0.0           0.0   \n1503         0.0           1.0            0.0              0.0           0.0   \n\n      proto_unknown  origstate_unknown  appproto_unknown  \n0               0.0                0.0               0.0  \n1               0.0                0.0               0.0  \n2               0.0                0.0               0.0  \n3               0.0                0.0               0.0  \n4               0.0                0.0               0.0  \n...             ...                ...               ...  \n1499            0.0                0.0               0.0  \n1500            0.0                0.0               0.0  \n1501            0.0                0.0               0.0  \n1502            0.0                0.0               0.0  \n1503            0.0                0.0               0.0  \n\n[1504 rows x 23 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>dur</th>\n      <th>pkts</th>\n      <th>allbytes</th>\n      <th>spkts</th>\n      <th>sbytes</th>\n      <th>label</th>\n      <th>proto_icmp</th>\n      <th>proto_tcp</th>\n      <th>proto_udp</th>\n      <th>origstate_OTH</th>\n      <th>...</th>\n      <th>state_Established</th>\n      <th>state_NotEstablished</th>\n      <th>appproto_-</th>\n      <th>appproto_dns</th>\n      <th>appproto_http</th>\n      <th>appproto_modbus</th>\n      <th>appproto_ssl</th>\n      <th>proto_unknown</th>\n      <th>origstate_unknown</th>\n      <th>appproto_unknown</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.000396</td>\n      <td>3.0</td>\n      <td>516.0</td>\n      <td>3.0</td>\n      <td>516.0</td>\n      <td>normal</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0.006307</td>\n      <td>63.0</td>\n      <td>7308.0</td>\n      <td>63.0</td>\n      <td>7308.0</td>\n      <td>normal</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0.000396</td>\n      <td>3.0</td>\n      <td>516.0</td>\n      <td>3.0</td>\n      <td>516.0</td>\n      <td>normal</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0.006307</td>\n      <td>63.0</td>\n      <td>7308.0</td>\n      <td>63.0</td>\n      <td>7308.0</td>\n      <td>normal</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4.524552</td>\n      <td>12.0</td>\n      <td>5460.0</td>\n      <td>12.0</td>\n      <td>5460.0</td>\n      <td>normal</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1499</th>\n      <td>0.000000</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>normal</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>1500</th>\n      <td>1.001310</td>\n      <td>2.0</td>\n      <td>74.0</td>\n      <td>2.0</td>\n      <td>74.0</td>\n      <td>normal</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>1501</th>\n      <td>0.000000</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>normal</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>1502</th>\n      <td>1.001310</td>\n      <td>2.0</td>\n      <td>74.0</td>\n      <td>2.0</td>\n      <td>74.0</td>\n      <td>normal</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>1503</th>\n      <td>1.000463</td>\n      <td>2.0</td>\n      <td>74.0</td>\n      <td>2.0</td>\n      <td>74.0</td>\n      <td>normal</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>\n<p>1504 rows × 23 columns</p>\n</div>"
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[((df.appproto != '-') & (df.appproto != 'dns') & (df.appproto != 'http') & (df.appproto != 'modbus') & (df.appproto != 'ssl')), 'appproto_unknown'] = float(1)\n",
+    "df.loc[((df.origstate != 'SF') & (df.origstate != 'S0') & (df.origstate != 'RSTR') & (df.origstate != 'OTH')), 'origstate_unknown'] = float(1)\n",
+    "df.loc[((df.proto != 'udp') & (df.proto != 'icmp') & (df.proto != 'tcp')), 'proto_unknown'] = float(1)\n",
+    "df = df.drop(columns=['appproto', 'state', 'origstate','proto'])\n",
+    "df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
